BHV-16979: New IntegerPicker doesn't ensure consistent width while scrolling
Issue:
- IntegerPicker width is decided by the digit length of number.
- But, each character has different width on font.

Fix:
Add a invisible buffer that occupies some fixed width.

DCO-1.1-Signed-Off-By: Kunmyon Choi kunmyon.choi@lge.com

--- a/css/IntegerPicker.less
+++ b/css/IntegerPicker.less
@@ -35,6 +35,13 @@
 	background: transparent;
 }
 
+.moon-scroll-picker-buffer {
+	white-space: nowrap;
+	padding: 0 @moon-picker-min-padding 2px @moon-picker-min-padding;
+	height: 0;
+	opacity: 0;
+}
+
 .moon-scroll-picker-overlay-container {
 	position:absolute;
 	z-index: 1;
